--- a/style.css
+++ b/style.css
@@ -133,14 +133,20 @@ ul {
 
 /* Responsive Layout Options */
 @media only screen and (max-width: 700px) {
-  .column { /* Switch back to max-width 600px if necessary */
-    width: 100%;
-  }
+
+}
+
+@media only screen and (max-width: 600px) {
   .responsive {
     width: 49.99999%;
     margin: 6px 0;
   }
+
+  .column { /* Switch back to max-width 600px if necessary */
+    width: 100%;
+  }
 }
+
 @media only screen and (max-width: 500px) {
   .responsive {
     width: 100%;
