--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ ul {
 
 /* Thumbnail - Image */
 .thumbnail img {
-  width: 100%;
+  max-width: 100%;
   height: auto;
   display: block;
 }
@@ -128,20 +128,17 @@ ul {
 .responsive {
   padding: 0 6px;
   float: left;
-  width: 24.99999%;
+  max-width: 25%;
 }
 
 /* Responsive Layout Options */
 @media only screen and (max-width: 700px) {
-
+  .responsive {
+    max-width: 50%;
+  }
 }
 
 @media only screen and (max-width: 600px) {
-  .responsive {
-    width: 49.99999%;
-    margin: 6px 0;
-  }
-
   .column { /* Switch back to max-width 600px if necessary */
     width: 100%;
   }
@@ -149,7 +146,7 @@ ul {
 
 @media only screen and (max-width: 500px) {
   .responsive {
-    width: 100%;
+    max-width: 100%
   }
 }
 
