--- a/style.css
+++ b/style.css
@@ -132,18 +132,14 @@ ul {
 }
 
 /* Responsive Layout Options */
-@media only screen and (max-width: 700px) {
-  
-}
-
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 1000px) {
   .column { /* Switch back to max-width 600px if necessary */
     width: 100%;
   }
 }
 
-@media only screen and (max-width: 500px) {
-  .responsive {
+@media only screen and (max-width: 800px) {
+  .responsive { /* Switch back to max-width 700px if necessary */
     max-width: 100%
   }
 }
