--- a/style.css
+++ b/style.css
@@ -128,18 +128,27 @@ ul {
 .responsive {
   padding: 0 6px;
   float: left;
-  max-width: 50%;
+  max-width: 25%;
 }
 
 /* Responsive Layout Options */
-@media only screen and (max-width: 1000px) {
-  .column { /* Switch back to max-width 600px if necessary */
-    width: 100%;
+@media only screen and (max-width: 900px) {
+  .responsive {
+    max-width: 33.3333%
   }
 }
-
 @media only screen and (max-width: 800px) {
-  .responsive { /* Switch back to max-width 700px if necessary */
+  .column {
+    max-width: 100%;
+  }
+}
+@media only screen and (max-width: 700px) {
+  .responsive {
+    max-width: 50%
+  }
+}
+@media only screen and (max-width: 500px) {
+  .responsive {
     max-width: 100%
   }
 }
