--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ ul {
   padding: 0;
 }
 
-/* Flexbox to Fill Height */
+/* Flex-Wrapper for Page */
 .fill-height {
   min-height: 100%;
   display: flex;
@@ -50,6 +50,12 @@ ul {
   justify-content: center;
 }
 
+/* Top Navigation - Hover */
+.top-nav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
 /* Top Navigation Bar - Links */
 .top-nav a {
   float: left;
@@ -57,12 +63,6 @@ ul {
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-}
-
-/* Top Navigation - Hover */
-.top-nav a:hover {
-  background-color: #ddd;
-  color: black;
 }
 
 /* Content */
@@ -80,7 +80,7 @@ ul {
   text-align: center;
 }
 
-/* Clear Floats After Row */
+/* Row - Clear Floats */
 .row:after {
   content: "";
   display: table;
@@ -109,31 +109,38 @@ ul {
   text-decoration: none;
 }
 
-.frame {
+/* Thumbnail - Flex-Wrapper for Images */
+.image-frame {
   flex: 1 0;
   display: flex;
   background-color: black;
 }
 
-.frame img {
+/* Thumbnail - Images */
+.image-frame img {
   width: 100%;
   object-fit: contain;
 }
 
-/* Thumbnail - Image */
-.thumbnail img {
-  flex: 1;
-  max-width: 100%;
-  height: auto;
+/* Thumbnail - Flex-Wrapper for Videos */
+.video-frame {
+  flex: 1 0;
+  overflow: hidden;
+  padding-top: 56.25%;
+  position: relative;
 }
 
-/* Thumnail - Video */
-.thumbnail iframe {
-  flex: 1;
-  display: block;
+/* Thumbnail - Videos */
+.video-frame iframe {
+  border: 0;
+   height: 100%;
+   left: 0;
+   position: absolute;
+   top: 0;
+   width: 100%;
 }
 
-/* Caption */
+/* Thumbnail - Caption */
 .caption {
   flex: 0 1;
   padding: 15px;
@@ -141,7 +148,7 @@ ul {
   text-align: center;
 }
 
-/* Responsive Wrapper for Thumbnails */
+/* Thumbnail - Wrapper for Responsive Layout */
 .responsive {
   padding: 6px;
   float: left;
@@ -174,6 +181,12 @@ ul {
   text-align: center;
 }
 
+/* Footer - Hover */
+.footer:hover {
+  background-color: #ddd;
+  color: black;
+}
+
 /* Footer - Links */
 .footer a {
   display: block;
@@ -181,10 +194,4 @@ ul {
   color: inherit;
   text-align: center;
   text-decoration: none;
-}
-
-/* Footer - Hover */
-.footer:hover {
-  background-color: #ddd;
-  color: black;
 }
