--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ ul {
   align-items: stretch;
   width: 100%;
   height: 100%;
+  color: black;
   text-decoration: none;
 }
 
@@ -143,11 +144,11 @@ ul {
 /* Thumbnail - Caption */
 .caption {
   flex: 0 1;
-  padding: 15px;
+  padding: 6px;
   background-color: #f1f1f1;
   text-align: center;
   justify-content: center;
-  font-size: 1vw;
+  font-size: 14px;
 }
 
 /* Thumbnail - Wrapper for Responsive Layout */
