--- a/style.css
+++ b/style.css
@@ -36,10 +36,17 @@ ul {
 .header {
   flex-shrink: 0;
   background-color: #f1f1f1;
-  font-size: 2.5em;
   text-transform: uppercase;
   text-align: center;
   padding: 20px;
+}
+
+/* Header Text */
+.header h1 {
+  font-size: 4em;
+}
+.header p {
+  font-size: 2em;
 }
 
 /* Top Navigation Bar */
