--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ ul {
   padding: 20px;
 }
 
-/* Header Text */
+/* Header - Text */
 .header h1 {
   font-size: 4em;
 }
@@ -95,6 +95,12 @@ ul {
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+}
+
+/* Column */
+.column {
+  flex: 50%;
+  padding: 10px;
 }
 
 /* Thumbnail */
