--- a/style.css
+++ b/style.css
@@ -205,15 +205,24 @@ ul {
   .responsive {
     max-width: 33.3333%
   }
+  .column {
+    font-size: 18px;
+  }
 }
 @media only screen and (max-width: 700px) {
   .responsive {
     max-width: 50%
   }
+  .column {
+    font-size: 14px;
+  }
 }
 @media only screen and (max-width: 500px) {
   .responsive {
     max-width: 100%
+  }
+  .column {
+    font-size: 12px;
   }
 }
 
