--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ ul {
 
 /* Section Header */
 .section-header {
-  font-size: 2.5em;
+  font-size: 50px;
   text-transform: uppercase;
   text-align: center;
   padding: 10px;
@@ -128,6 +128,32 @@ ul {
 /* Images - Circle */
 .image-circle {
   border-radius: 50%;
+}
+
+/* Icons */
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 70px;
+  border-radius: 20%;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px;
+}
+.fa:hover {
+    opacity: 0.7;
+}
+.fa-envelope {
+  background: #d44638;
+  color: #eeeeee;
+}
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
+.fa-skype {
+  background: #00aff0;
+  color: white;
 }
 
 /* Thumbnail */
@@ -208,6 +234,9 @@ ul {
   }
   .column {
     font-size: 18px;
+  }
+  .section-header {
+    font-size: 30px;
   }
 }
 @media only screen and (max-width: 700px) {
