--- a/style.css
+++ b/style.css
@@ -116,7 +116,10 @@ ul {
 .column .image-frame {
   flex: 1 0;
   display: flex;
+  margin-left: auto;
+  margin-right: auto;
   max-height: 500px;
+  max-width: 500px;
 }
 
 /* Column - Images */
@@ -239,6 +242,10 @@ ul {
   .section-header {
     font-size: 30px;
   }
+  .column .image-frame {
+    max-height: 400px;
+    max-width: 400px;
+  }
 }
 @media only screen and (max-width: 700px) {
   .responsive {
@@ -264,6 +271,10 @@ ul {
   }
   .column {
     font-size: 12px;
+  }
+  .column .image-frame {
+    max-height: 300px;
+    max-width: 300px;
   }
 }
 
