Updated project details, modified pdf view, created projects page

--- a/style.css
+++ b/style.css
@@ -140,8 +140,8 @@ ul {
   font-weight: bold;
 }
 
-/* Contact - Text */
-#contact {
+/* Message - Text */
+#message {
   font-size: 24px;
   text-align: center;
   display: block;
