twitter icon style

--- a/style.css
+++ b/style.css
@@ -168,8 +168,8 @@ ul {
   background: #007bb5;
   color: white;
 }
-.fa-skype {
-  background: #00aff0;
+.fa-twitter {
+  background: #1da1f2;
   color: white;
 }
 
